<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".MainActivity">

    <LinearLayout

        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView

            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="9dp"
            android:layout_marginEnd="9dp"
            android:background="@color/aquamarine"
            android:padding="5dp"
            android:text="@string/fiche_de_choix"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="normal">

        </TextView>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnChargerCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/charger_image">

            </Button>

            <ImageView

                android:id="@+id/image"
                android:layout_width="150dp"
                android:layout_height="150dp">

            </ImageView>

        </LinearLayout>


        <LinearLayout

            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nom">

                </TextView>

                <EditText

                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nomPre"
                    android:inputType="text"
                    android:padding="8dp">

                </EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sp_cialit">

                </TextView>

                <RadioGroup

                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <RadioButton

                        android:id="@+id/rdbSi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/si">

                    </RadioButton>

                    <RadioButton

                        android:id="@+id/rdbIsil"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/isil">

                    </RadioButton>

                </RadioGroup>

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moyenne">

                </TextView>

                <EditText

                    android:id="@+id/edtMoy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/m"
                    android:inputType="numberDecimal"
                    android:maxLength="5"
                    android:padding="8dp">

                </EditText>

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView

                android:id="@+id/txtv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/aquamarine"
                android:padding="5dp"
                android:text="@string/votre_choix"
                android:textAlignment="center">

            </TextView>

            <Spinner

                android:layout_below="@+id/txtv"
                android:id="@+id/Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:entries="@array/Spcial">

            </Spinner>

        </RelativeLayout>


        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button

                android:id="@+id/btnSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:text="@string/envoyer">

            </Button>

            <Button

                android:id="@+id/btnActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/exercice_3">

            </Button>


            <Button

                android:id="@+id/btnActivity31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:text="Exercice 1 ">

            </Button>


        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>